route-datastore-canary.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: datastore
  namespace: apps
spec:
  hostnames:
  - datastore.lattice.sarathy.io
  parentRefs:
  - name: eks-lattice-network
    sectionName: http 
  rules:  
  - backendRefs:  
    - name: datastore-v1-svc
      kind: Service
      port: 3000
      namespace: apps
    matches:
    - path:
        type: PathPrefix
        value: /popular
  - backendRefs:  
    - name: datastore-v1-svc
      kind: Service
      port: 3000
      namespace: apps
      weight: 50
    - name: datastore-v2-svc
      kind: Service
      port: 3000
      namespace: apps      
      weight: 50
    matches:
    - path:
        type: PathPrefix
        value: /summary

---
apiVersion: v1
kind: Service
metadata:
  name: datastore-v1-svc
  namespace: apps
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  sessionAffinity: None
  type: ClusterIP  
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: datastore
    role: database-service  
    version: v1

---
apiVersion: v1
kind: Service
metadata:
  name: datastore-v2-svc
  namespace: apps
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  sessionAffinity: None
  type: ClusterIP  
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: datastore
    role: database-service  
    version: v2
